Thu Apr 18 10:25:57 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/06_compilation.html:
          html fix

Thu Apr 18 09:44:00 UTC 2013  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/HomeDerived/Connector2/Hello_Connector2.idl:
        Fuzz error

Thu Apr 18 08:50:34 UTC 2013  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/HomeDerived:
        * connectors/dds4ccm/tests/HomeDerived/Base:
        * connectors/dds4ccm/tests/HomeDerived/Base/Hello_Base.idl:
        * connectors/dds4ccm/tests/HomeDerived/Base/Hello_Base.mpc:
        * connectors/dds4ccm/tests/HomeDerived/Connector1:
        * connectors/dds4ccm/tests/HomeDerived/Connector1/Hello_Connector.idl:
        * connectors/dds4ccm/tests/HomeDerived/Connector1/Hello_Connector.mpc:
        * connectors/dds4ccm/tests/HomeDerived/Connector2:
        * connectors/dds4ccm/tests/HomeDerived/Connector2/Hello_Connector2.idl:
        * connectors/dds4ccm/tests/HomeDerived/Connector2/Hello_Connector2.mpc:
        * connectors/dds4ccm/tests/HomeDerived/Sender:
        * connectors/dds4ccm/tests/HomeDerived/Sender/Hello_Sender.idl:
        * connectors/dds4ccm/tests/HomeDerived/Sender/Hello_Sender.mpc:
        * connectors/dds4ccm/tests/HomeDerived/Sender/Hello_Sender_exec.h:
        * connectors/dds4ccm/tests/HomeDerived/Sender/Hello_Sender_exec.cpp:
        * connectors/dds4ccm/tests/HomeDerived/descriptors:
        * connectors/dds4ccm/tests/HomeDerived/descriptors/DeploymentPlan.cdp:
        * connectors/dds4ccm/tests/HomeDerived/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/tests/HomeDerived/descriptors/run_test.pl:
        Test with derived homes and derived home components .

Tue Apr 16 17:54:56 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Several fixes
